# gz21_ocean_momentum

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MLproject  README.md  TODO.md  Untitled-Copy2.ipynb  Untitled1.ipynb  __init__.py  cmip26.py  cmip_runparams.json  conda.yaml  config.ini  flake.nix  implementation.ipynb  listData.py  offline_test_SWM.ipynb  pyproject-poetry.toml  pyproject.toml  shell.nix  testUnet.ipynb  testUnet1pctCO2.ipynb  test_global.ipynb  test_global_control.ipynb  trainScript.py  training_subdomains.yaml  updateyamls.py  utils.py
.github/workflows/: CI.yaml  ci.yaml  code-quality.yaml  linting.yaml
analysis/: analysis.py  latex_table.txt  loadmlflow.py  multiscale_analysis.py  temp.py  utils.py
bash-scripts/: data-run.sh  data-run.sh.e2818503  data-run.sh.o2818503  train-run.sh
data/: coarse.py  datasets.py  pangeo_catalog.py  test_coarse.py
docs/: 2021-paper-reproduction.md  Figure1.ipynb  Untitled2.ipynb  admin.md  common-errors.md  data.md  implementation.ipynb  slurm.md  test.md  train.md
examples/cli-configs/: data-paper-fig-1.yaml  data-paper-fig-6-1pct.yaml  data-paper-fig-6-ctrl.yaml  data-paper.yaml  data-quick-2.yaml  data-quick.yaml  train-wip.yaml
examples/jupyter-notebooks/: Figure2.ipynb  Laure_maps_and_implementation-Copy1.ipynb  README.md  Untitled2.ipynb  Untitled3.ipynb  experiment-assorted-01.ipynb  experiment-assorted-02.ipynb  generate-figure-1.ipynb  generate-figure-2.ipynb  generate-paper-figure-1.ipynb  generate-paper-figure-6.ipynb  multi-region-analysis-01.ipynb  multi-region-analysis-02.ipynb  multi-region-analysis-testUnet1pctCO2.ipynb  multi-region-analysis-testunet.ipynb  offline_test_SWM.ipynb  test-global.ipynb  test_global.ipynb  test_global_control.ipynb
examples/jupyter-notebooks/mlruns/0/: meta.yaml
examples/jupyter-notebooks/paper/: generate-paper-figure-6.ipynb  test-global-fig-4-5-7.ipynb
models/: Unet.py  base.py  models1.py  submodels.py  transforms.py  utils.py
other/: telegram.py  telegram_start_jupyter.py
regression/: functions.py
resources/cli-configs/: README.md  data-paper.yaml  train-paper.yaml  train-wip.yaml  training-subdomains-paper.yaml  training-subdomains-small.yaml
resources/jupyter-notebooks/: .gitignore  README.md  other-shallow-water-model.ipynb  train_results.ipynb
resources/jupyter-notebooks/paper/: README.md  generate-paper-figure-1.ipynb  generate-paper-figure-6.ipynb  test-global-fig-4-5-7.ipynb
resources/slurm-jobs/: README.md  data.sh  train.sh
run-artifacts/swm/run0002/: param.txt
run-artifacts/swm/run0003/: info.txt  param.npy  param.txt
run-artifacts/swm/run0004/: info.txt  param.txt
src/: __init__.py  swm_param.py.patch  trainScript.py  utils.py
src-new/: forcing_computation.py  step_data.py
src/analysis/: __init__.py  multiscale_analysis.py  utils.py
src/data/: datasets.py  setup.py  utils.py  xrtransforms.py
src/gz21_ocean_momentum/: __init__.py  cmip26.py  listData.py  swm_param.py.patch  trainScript.py  updateyamls.py  utils.py
src/gz21_ocean_momentum/analysis/: analysis.py  base.py  latex_table.txt  loadmlflow.py  multiscale_analysis.py  temp.py  test_anim.py  utils.py
src/gz21_ocean_momentum/cli/: data.py  infer.py  inference-test.py  inference.py  test.py  train.py
src/gz21_ocean_momentum/cli/remove/: test.py
src/gz21_ocean_momentum/common/: assorted.py  bounding_box.py  cli.py
src/gz21_ocean_momentum/data/: coarse.py  datasets.py  pangeo_catalog.py  setup.py  utils.py  xrtransforms.py
src/gz21_ocean_momentum/disabled/: mlflow.py
src/gz21_ocean_momentum/inference/: main.py  utils.py
src/gz21_ocean_momentum/lib/: data.py  model.py
src/gz21_ocean_momentum/models/: base.py  blocks_2d.py  fully_conv_net.py  models1.py  submodels.py  transforms.py  utils.py
src/gz21_ocean_momentum/new/common/: bounding_box.py
src/gz21_ocean_momentum/new/data/: cli.py  coarsen.py  step.py  utils.py
src/gz21_ocean_momentum/other/: telegram_start_jupyter.py
src/gz21_ocean_momentum/step/data/: coarsen.py  lib.py
src/gz21_ocean_momentum/step/inference/: lib.py
src/gz21_ocean_momentum/step/train/: lib.py
src/gz21_ocean_momentum/testing/: main.py  metrics.py  utils.py
src/gz21_ocean_momentum/train/: base.py  losses.py  utils.py
src/gz21_ocean_momentum/unsorted/: train_data_xr_to_pytorch.py
src/gz_ocean_momentum/: __init__.py
src/gz_ocean_momentum/analysis/: __init__.py  base.py  multiscale_analysis.py  test_anim.py  utils.py
src/gz_ocean_momentum/data/: coarse.py  datasets.py  pangeo_catalog.py  readData.py  setup.py  test_coarse.py  utils.py  xrtransforms.py
src/gz_ocean_momentum/models/: Unet.py  base.py  submodels.py  transforms.py  utils.py
src/gz_ocean_momentum/testing/: main.py  metrics.py  utils.py
src/gz_ocean_momentum/train/: base.py  utils.py
src/models/: fully_conv_net.py  models1.py  submodels.py  transforms.py  utils.py
src/testing/: main.py  metrics.py  utils.py
src/train/: losses.py
swm-master/swm-master/: swm_param.py  swm_run.py
swm-master/swm-master/calc/: power_inout_calc.py
swm-master/swm-master/output/run0002/: info.txt  param.npy
swm-master/swm-master/output/run0004/: param.npy
swm-master/swm-master/output/run0005/: info.txt  param.npy  param.txt
testing/: main.py
tests/data/: test_coarse.py
tests/lib/: test_data.py
tests/models/: test_fully_conv_net.py
tests/step/: test_data.py
train/: losses.py
