[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
version = "0.2.0"

name = "gz21_ocean_momentum"
description = "TODO"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # general, likely used all over
    "scipy",
    "xarray",
    "dask",
    "mlflow-skinny",

    # data download
    "intake",
    "requests",
    "aiohttp",
    "intake-xarray",
    "gcsfs",

    "matplotlib>=3.7", # analysis, examples
    "cartopy>=0.21", # analysis (plotting data)

    "torch>=1.13.1",
    "progressbar2>=4.2.0", # testing/utils (but imported by trainScript)

    # new
    "configargparse>=1.7",
]

authors = [
  { name="Arthur Guillaumin", email="a.guillaumin@qmul.ac.uk" },
]

maintainers = [
  { name="Ben Orchard", email="thefirstmuffinman@gmail.com" },
  { name="Jack Atkinson", email="jack.atkinson1000@gmail.com" },
]

[project.urls]
"Homepage" = "https://github.com/m2lines/GZ21_ocean_momentum"
"Bug Tracker" = "https://github.com/m2lines/GZ21_ocean_momentum/issues"

[project.optional-dependencies]
TEST = ["pytest"]

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

#[tool.setuptools.packages]
#find = {}
[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["gz21_ocean_momentum", "gz21_ocean_momentum.*"]  # package names should match these glob patterns (["*"] by default)
#exclude = ["gz21_ocean_momentum.tests*", "examples.py"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
